syntax = "proto3";

package order;

option go_package = "github.com/dzuura/bookstore-microservice/order-service/proto;orderpb";

service OrderService {
  rpc PlaceOrder (OrderRequest) returns (OrderResponse);
}

message OrderRequest {
  int32 user_id = 1;
  int32 book_id = 2;
  int32 quantity = 3;
}

message OrderResponse {
  string message = 1;
  int32 order_id = 2;
}
